--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   animated_text_kit: ^4.3.0
+  email_validator: ^3.0.0
 
 dev_dependencies:
   flutter_test:
