--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   animated_text_kit: ^4.3.0
   email_validator: ^3.0.0
+  provider: ^6.1.5+1
 
 dev_dependencies:
   flutter_test:
